--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,26 @@
 <html class="no-js">
 <!--<![endif]-->
     <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126198396-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Course Finder</title>
+        gtag('config', 'UA-126198396-1');
+      </script>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta
+        name="viewport"
+        content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+      />
+      <title>Path Finder</title>
+      
+      
+    <base href="/"/>
     </head>
 
     <body>
